- removed Obullo.php from /base/obullo/ directory. Updated Bootstrap.php
- Depreciated using parent::__global() func in all controllers. We moved it to Obullo/Controller.php , parent::__global() function
works automatically from now on.
- added $uri parameter to source_url(); function in url helper. Updated related file /base/Config.php
- fixed auto_source_url variable bug in Config.php
//-----------------------------------------------------------------------------

!!!!!!!!!!!!!!!!!!! NEW TODOS !!!!!!!!!!!!!!!

@todo .. look log_message(); some functions does not work.
@todo .. add user guide to extending to Core MY_model functionality.
it works in Obullo !
http://www.askaboutphp.com/50/codeigniter-extending-the-native-model-and-make-it-your-own.html 

@todo .. change htaccess rules in userguide DirectoryIndex index.php, index.html
@todo .. add htaccess rules for ngnix server
@todo .. put archived doc meta tag to old user guide base layout ..
@todo .. change obullo mvc2 names as Obullo GC in web site.            
@todo .. change mvc2 map as GC in userguide                                   


NEXT VERSION
----------------------------------------------------------------

MONGO DB API ( loader::nosql('mongodb'); )
http://devzone.zend.com/article/12132-Getting-Started-with-MongoDB-and-PHP
http://lithify.me/en/docs/lithium/data/source/MongoDb

@next version todo .. think a js validator function
 var frmvalidator = new Validator("form");
 frmvalidator.addValidation("firstname","req","Please enter your First Name");
 frmvalidator.addValidation("firstname","maxlen=20","Max length for FirstName is 20");
 frmvalidator.addValidation("firstname","alpha");
 
@next version todo .. add user guide to uri protocol functionality ... http://localhost/obullo/index.php?foo=bar it works in just $config['uri_protocol']          = "PATH_INFO"; we need to explain this functionality ..
@next version todo .. utf8 support http://www.phpwact.org/php/i18n/utf-8